Bug: fix alignment issues

--- a/src/components/Admin/AddEvent/AddEvent.css
+++ b/src/components/Admin/AddEvent/AddEvent.css
@@ -1,6 +1,6 @@
-.AddEvent { 
-  padding: 1em;
+.Add-Event { 
   text-align: left;
+  padding: 1em;
 }
 
 .center {
