--- a/src/components/Admin/AddUser/AddUser.css
+++ b/src/components/Admin/AddUser/AddUser.css
@@ -1,3 +1,7 @@
 .AddUser {
   text-align: center;
 }
+
+.Create-Form { 
+  text-align: center;
+}
