--- a/src/components/Admin/EditEvents/EditEvents.css
+++ b/src/components/Admin/EditEvents/EditEvents.css
@@ -6,3 +6,7 @@
 .event-link:hover {
   cursor: pointer;
 }
+
+.Edit-Events {
+  text-align: center;
+}
